# dauth

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
client/cpp/: main.cpp
cmake/: json.cmake  logpp.cmake
include/auth/: DClient.hpp  DServer.hpp  EndpointHandlers.hpp
include/auth/crypto/: AuthCrypto.hpp  AuthIdentity.hpp  StringEncoder.hpp
include/util/fio/: DirectoryHelper.hpp
server/: main.cpp
sources/auth/: DClient.cpp  DServer.cpp  EndpointHandlers.cpp
sources/auth/crypto/: AuthCrypto.cpp  AuthIdentity.cpp  Hash.cpp  StringEncoder.cpp
sources/util/fio/: DirectoryHelper.cpp
test/: main.cpp
